--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "dayjs": "^1.11.13"
+        "dayjs": "^1.11.13",
+        "lottie-react": "^2.4.0"
     }
 }
