--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
         "@inertiajs/inertia": "^0.11.1",
-        "dayjs": "^1.11.13"
+        "chart.js": "^4.4.6",
+        "dayjs": "^1.11.13",
+        "react-chartjs-2": "^5.2.0"
     }
 }
