--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "dayjs": "^1.11.13",
-        "lottie-react": "^2.4.0"
+        "lottie-react": "^2.4.0",
+        "react-toastify": "^10.0.6"
     }
 }
