--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.7.0",
+        "@fortawesome/free-solid-svg-icons": "^6.7.0",
+        "@fortawesome/react-fontawesome": "^0.2.2",
+        "@heroicons/react": "^2.2.0",
         "dayjs": "^1.11.13",
         "lottie-react": "^2.4.0",
+        "react-router-dom": "^6.28.0",
         "react-toastify": "^10.0.6"
     }
 }
