--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
         "@fortawesome/fontawesome-svg-core": "^6.6.0",
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "@heroicons/react": "^2.2.0",
         "@inertiajs/inertia": "^0.11.1",
         "chart.js": "^4.4.6",
         "dayjs": "^1.11.13",
-        "react-chartjs-2": "^5.2.0"
+        "fullcalendar": "^6.1.15",
+        "react-chartjs-2": "^5.2.0",
+        "react-icons": "^5.3.0",
+        "react-toastify": "^10.0.6"
     }
 }
