--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@headlessui/react": "^2.0.0",
+        "@headlessui/react": "^2.2.0",
         "@inertiajs/react": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-react": "^4.2.0",
@@ -24,12 +24,20 @@
         "@fortawesome/fontawesome-svg-core": "^6.7.0",
         "@fortawesome/free-solid-svg-icons": "^6.7.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "@fullcalendar/daygrid": "^6.1.15",
+        "@fullcalendar/interaction": "^6.1.15",
+        "@fullcalendar/react": "^6.1.15",
+        "@fullcalendar/timegrid": "^6.1.15",
         "@heroicons/react": "^2.2.0",
         "dayjs": "^1.11.13",
         "lottie-react": "^2.4.0",
+        "moment": "^2.30.1",
+        "react-big-calendar": "^1.16.3",
+        "react-datepicker": "^7.5.0",
         "react-image-crop": "^11.0.7",
         "react-loader-spinner": "^6.1.6",
         "react-router-dom": "^6.28.0",
-        "react-toastify": "^10.0.6"
+        "react-toastify": "^10.0.6",
+        "sweetalert2": "^11.14.5"
     }
 }
